modified:   .gitignore 	modified:   analysis/markdown/sc5hmC_DhMR.Rmd 	modified:   analysis/markdown/sc5hmC_DhMR.nb.html 	modified:   analysis/markdown/sc5hmC_genewise_cor.Rmd 	modified:   analysis/markdown/sc5hmC_genewise_cor.nb.html 	modified:   analysis/markdown/sc5hmC_hotspot_signal.Rmd 	modified:   analysis/markdown/sc5hmC_hotspot_signal.nb.html 	new file:   data/metadata/TET3cKO_2C.sample.xls 	new file:   data/metadata/TET3cKO_EZ.sample.xls 	new file:   data/metadata/TET3cKO_LZ.sample.xls 	new file:   data/metadata/WT_2C.sample.xls 	new file:   data/metadata/WT_LZ.sample.xls 	new file:   data/metadata/mm10.gencode.p4.protein_coding.bed 	new file:   data/metadata/mm10.genebody.cpg_density.rds 	new file:   data/processed/1111_hmC_ratio_1X50.merge.1k.v5s4.hotspot.bed 	new file:   data/processed/DhMR.sc_5k.rds 	new file:   data/processed/Gene_wise_cor.5hmC_5mC.20240217.tsv 	new file:   data/processed/H3K27me3_genebody/GSM2082673_2cell.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082674_2cell.2.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082680_4cell.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082681_4cell.2.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082686_8cell.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082687_8cell.2.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082693_morula.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082694_morula.2.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082698_ICM.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082699_ICM.2.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082703_TE.1.genebody.bed 	new file:   data/processed/H3K27me3_genebody/GSM2082704_TE.2.genebody.bed 	new file:   data/processed/RNA.genebody_mtx.tsv 	new file:   data/processed/WT_TETcKO.LZY_to_2C.DhmR.sc_5k.abundance.tsv 	new file:   data/processed/h3k36me3_genebody/1C.genebody.bed 

--- a/analysis/markdown/sc5hmC_DhMR.Rmd
+++ b/analysis/markdown/sc5hmC_DhMR.Rmd
@@ -2,7 +2,7 @@
 title: "sc5hmC_DhMR"
 output: html_notebook
 author: "Sherry Xue"
-date: "2025-03-13"
+date: "2025-05-10"
 ---
 
 ```{r setup}
@@ -17,9 +17,9 @@ library(purrr)
 ```
 
 ```{r func}
-source("etl/merge_DHMR_lfc.R")
-source("etl/plot_DHMR.frac.R")
-source("etl/plot_RDL_RhML.R")
+source("code/scripts/merge_DHMR_lfc.R")
+source("code/scripts/plot_DHMR.frac.R")
+source("code/scripts/plot_RDL_RhML.R")
 ```
 
 ```{r pal}
@@ -31,7 +31,6 @@ category_col_list <- c("increasing"="#ee6300","decreasing"="#97ca5b")
 metilene_res <- "data/processed/DhMR.sc_5k.rds"
 tet_5hmC_abundance_fn <- "data/processed/WT_TETcKO.LZY_to_2C.DhmR.sc_5k.abundance.tsv"
 ```
-
 
 ```{r DhMR, fig.width=10, fig.height=4}
 plot_dt <- readRDS(metilene_res)
@@ -69,7 +68,7 @@ egg::ggarrange(p5, p6, nrow = 1)
 
 ```{r TETcKO, fig.width=6, fig.height=4}
 meta <- lapply(
-  list.files("data/documentation", pattern = "sample.xls", full.names = T),
+  list.files("data/metadata", pattern = "sample.xls", full.names = T),
   function(x){
     df <- read.table(x) %>% setNames("Sample") %>%
       mutate(
